<resources>
    <string name="app_name">Field Force</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_account">Create new Account? </string>
    <string name="attendancePlease">Click Selfie for Attendace</string>
    <string name="monoHint">MOBILE NUMBER</string>
    <string name="NameHint">NAME</string>
    <string name="emailHint">EMAIL</string>
    <string name="passwordHint">Password</string>
    <string name="new_task">Assign Task</string>
    <string name="check_Report">Check Report</string>
    <string name="employee">Employees</string>
    <string name="assign_this_task">Assign Task</string>
    <string name="one_more_task">New Task</string>
    <string name="radio_male">MALE</string>
    <string name="radio_female">FEMALE</string>
    <string name="radio_complete">Complete</string>
    <string name="radio_pending">Pending</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="bottom_user">Profile</string>
    <string name="bottom_attendance">Attendance</string>
    <string name="bottom_task">Tasks</string>
    <string name="bottom_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
