<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/attendance_clicked"
        android:title="@string/bottom_task"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@drawable/attendance_clicked"
        android:title="@string/bottom_notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_attendance"
        android:enabled="true"
        android:icon="@drawable/attendance_clicked"
        android:title="@string/bottom_attendance"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_tasks"
        android:enabled="true"
        android:icon="@drawable/attendance_clicked"
        android:title="@string/bottom_task"
        app:showAsAction="always" />

</menu>