<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.grampower.attendance.SignUp">

<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarBackColor"
        android:layout_gravity="bottom"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageButton
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:id="@+id/back_Register"
            android:background="@color/toolbarBackColor"
            android:src="@drawable/ic_arrow_back_black_30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textColor="@color/black"
            android:id="@+id/employeeName"
            android:layout_marginLeft="@dimen/minimum"
            android:textSize="@dimen/toolbar_text_size"/>


    </android.support.v7.widget.Toolbar>


</android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/recycler_margin_top">
        <ProgressBar
            android:id="@+id/toolbar_progress_bar_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#795548"
            android:indeterminateTintMode="src_in"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            />

        <ScrollView
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp_10"
      android:layout_marginLeft="@dimen/minimum"
      android:layout_marginRight="@dimen/minimum">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dp_20"
            android:weightSum="1">

            <TextView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter Personal Details"
                android:gravity="center"
                android:textColor="@color/toolbarBackColor"
                android:textSize="@dimen/toolbar_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_smartphone_black_24dp"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mono"
                   android:textSize="@dimen/edittext_input_text_size"
                    android:textColor="@color/black"
                    android:hint="@string/monoHint"
                    android:inputType="number"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:maxLines="1"
                    android:layout_marginRight="@dimen/dp_25"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/activity_vertical_margin">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/mail"/>

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_input_text_size"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/email"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_25"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person_black_24dp"/>

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:textSize="@dimen/edittext_input_text_size"
                    android:textColor="@color/black"
                    android:hint="@string/NameHint"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_25"
                    android:maxLines="1"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_lock_outline_black_24dp"/>

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_input_text_size"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/password"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_25"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_lock_outline_black_24dp"/>

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_input_text_size"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/confirmpassword"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_25"
                    />
            </LinearLayout>


            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:checkedButton="@+id/male">

                <RadioButton
                    android:text="@string/radio_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:textSize="@dimen/edittext_input_text_size"
                    android:id="@+id/male" />

                <RadioButton
                    android:text="@string/radio_female"
                    android:textSize="@dimen/edittext_input_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100sp"
                    android:id="@+id/female" />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_weight=".1"
                android:background="@drawable/button_shape"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/register"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_20"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="Sign Up"/>
        </LinearLayout>
  </android.support.v7.widget.CardView>
    </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
